	      down soon.

2002-09-06

	* Fixes:
	    - rule state restored when backtracking called rules
	    - have driver use system(@args) to avoid shell meta-character
	      problems.
	    - quantifiers, stingy and otherwise, made more sane.

	* Additions:
	    - preliminary list of (un)implemented features in README
	
	* Test-failures:
	    - compiler/1_11: segfault, compiler/3_7: weird stack problem.
	      These seem to be either memory corruption or use of freed
	      memory -- small changes to the .p6 files make them go away.

2002-09-07

	* Fixes:
	    - remove a few unneeded grammar rules.
	    - reset parser state on compiler init.
	    - parse "@x := pattern" better

	* Additions:
	    - capturing groups and hypotheticals (some).
	    - bol and eol

2002-09-08

	* Fixes:
	    - parse sub declarations correctly
	    - remove a level of regex parsing rules
	    - !~ forces boolean result (not e.g. match object)
	    - no longer require explicit sub main
	    - given no longer looks in sub-blocks for associated "when"
	      statements.

	* Additions:
	    - --debug-regex to compile "noisy" regexes
	    - context-forcing operators (e.g. "_(expression)")
	    - builtin defined
	    - m:w//
	    - examples/bnf.p6: BNF parser (thanks to languages/conversion)

	* Test-failures:
	    - still compiler/{1_11,3_7}.

2002-09-11

	* Fixes:
	    - slurp-parameters for subs with required params.
	    - backslashes in strings
	    - add more "unimp" warnings, so people stop calling them bugs ;).
	    - infinite recursion in context::{ctx_right,val}
	    - $x = f(foo) will return last element of return value (rather
	      than array length).
	    - named captures now require capturing groups, instead of
	      creating them.
	    - @x := [(keep_this) not_this]*
	    - use normal string-parsing for /<"string">/.
	    - range in void context is a warning, not a fatal error.

	* Additions:
	    - m:approx($n)//, if you've got it.