@@ -1,6 +1,6 @@
 #!perl
 use strict;
-use P6C::TestCompiler tests => 12;
+use P6C::TestCompiler tests => 13;
 use Test::More qw(skip);
 
 ##############################
@@ -276,3 +276,28 @@ CODE
 (1, 0, 0)
 OUT
 
+##############################
+output_is(<<'CODE', <<'OUT', 'Hyper 4');
+sub main () {
+    my @a = (1..3);
+    my @b = (4..9);
+    my @c = @a ^+ @b;
+    print @c ^_ ' ',"\n";
+    @c = @b ^+ @a;
+    print @c ^_ ' ',"\n";
+    @b = @b ^+ @a;
+    print @b ^_ ' ',"\n";
+    @b = (4..9);
+    @b ^+= @a;
+    print @b ^_ ' ',"\n";
+    @b = (4..9);
+    @a ^+= @b;
+    print @a ^_ ' ',"\n";
+}
+CODE
+5.000000 7.000000 9.000000 7.000000 8.000000 9.000000 
+5.000000 7.000000 9.000000 7.000000 8.000000 9.000000 
+5.000000 7.000000 9.000000 7.000000 8.000000 9.000000 
+5.000000 7.000000 9.000000 7.000000 8.000000 9.000000 
+5.000000 7.000000 9.000000 7.000000 8.000000 9.000000 
+OUT
